# fx

./: .gitignore  Cargo.toml  Dockerfile  fx.yaml  justfile  readme.md
.github/workflows/: fx.yml
apps/: readme.md
apps/fx-app-counter/: Cargo.toml
apps/fx-app-counter/src/: lib.rs
apps/fx-app-demo/: Cargo.toml
apps/fx-app-demo/src/: lib.rs
apps/fx-app-hello-world/: Cargo.toml  hello-world.fx.yaml
apps/fx-app-hello-world/src/: lib.rs
apps/fx-app-mocks/: Cargo.toml
apps/fx-app-mocks/src/: lib.rs
apps/fx-app-rpc-test-service/: Cargo.toml
apps/fx-app-rpc-test-service/src/: lib.rs
apps/fx-dashboard/: Cargo.toml
apps/fx-dashboard/src/: cloud_api.rs  components.rs  database.rs  lib.rs  main.rs
apps/fx-fortunes/: Cargo.toml  fortunes.fx.yaml  fortunes.sql
apps/fx-fortunes/src/: lib.rs
apps/fx-test-app/: Cargo.toml
apps/fx-test-app-rpc/: Cargo.toml
apps/fx-test-app-rpc/src/: lib.rs
apps/fx-test-app/src/: lib.rs  unknown_import.rs
apps/fx-test-missing-export/: Cargo.toml
apps/fx-test-missing-export/src/: lib.rs
apps/fx-test-remove/: Cargo.toml
apps/fx-test-remove/src/: lib.rs
apps/fx-test-wrong-import/: Cargo.toml
apps/fx-test-wrong-import/src/: lib.rs
apps/fx-website/: Cargo.toml
apps/fx-website/src/: lib.rs  test_endpoints.rs
docs/: apps.md  benchmarking.md  notes.md  sqlx.md  streaming.md  todo.md
extra/benchmark-baseline-axum/: Cargo.toml
extra/benchmark-baseline-axum/src/: main.rs
extra/benchmark-baseline-node/: package.json  server.js
extra/fx-common/: Cargo.toml
extra/fx-common/src/: lib.rs
extra/fx-macro/: Cargo.toml
extra/fx-macro/src/: lib.rs
extra/introspection/: template.html
fx/: Cargo.toml
fx-api/: Cargo.toml  fx.capnp
fx-api/src/: lib.rs
fx-app-hello-world/: Cargo.toml
fx-app-hello-world/src/: lib.rs
fx-app-mocks/: Cargo.toml
fx-app-rpc-test-service/: Cargo.toml
fx-app-rpc-test-service/src/: lib.rs
fx-cloud/: Cargo.toml
fx-cloud-common/: Cargo.toml
fx-cloud-common/src/: lib.rs
fx-cloud-dashboard/: Cargo.toml
fx-cloud-dashboard/src/: cloud_api.rs  components.rs  database.rs  events.rs  icons.rs  lib.rs
fx-cloud/src/: cloud.rs  compiler.rs  config.rs  consumer.rs  cron.rs  definition.rs  error.rs  futures.rs  http.rs  kafka.rs  kv.rs  lib.rs  logs.rs  main.rs  metrics.rs  queue.rs  registry.rs  sql.rs  storage.rs  streams.rs
fx-common/src/: api.rs  lib.rs
fx-core/: Cargo.toml
fx-core/src/: lib.rs  stream.rs
fx-dashboard/: Cargo.toml  readme.md
fx-dashboard/src/: cloud_api.rs  events.rs  lib.rs
fx-macro/: Cargo.toml
fx-macro/src/: lib.rs
fx-runtime/: Cargo.toml
fx-runtime-common/: Cargo.toml
fx-runtime-common/src/: events.rs  lib.rs  utils.rs
fx-runtime/src/: api.rs  cloud.rs  compatibility.rs  compiler.rs  consumer.rs  cron.rs  definition.rs  error.rs  futures.rs  http.rs  kafka.rs  kv.rs  lib.rs  logs.rs  main.rs  metrics.rs  profiling.rs  runtime.rs  sql.rs  streams.rs
fx-runtime/src/api/: kv.rs  metrics.rs  mod.rs  rpc.rs  sql.rs  unsupported.rs
fx-runtime/src/common/: events.rs  mod.rs  utils.rs
fx-runtime/src/definitions/: bindings.rs  config.rs  mod.rs  monitor.rs  triggers.rs
fx-runtime/src/effects/: blob.rs  fetch.rs  kv.rs  logs.rs  metrics.rs  mod.rs  sql.rs
fx-runtime/src/function/: abi.rs  deployment.rs  instance.rs  mod.rs  resource.rs
fx-runtime/src/function/abi/: function_memory.rs  mod.rs
fx-runtime/src/introspection/: mod.rs  script.js  server.rs  style.css
fx-runtime/src/resources/: future.rs  mod.rs  resource.rs  serialize.rs
fx-runtime/src/runtime/: definition.rs  error.rs  futures.rs  kv.rs  logs.rs  metrics.rs  mod.rs  runtime.rs  sql.rs  streams.rs
fx-runtime/src/runtime/api/: mod.rs
fx-runtime/src/server/: config.rs  consumer.rs  cron.rs  fx_server.rs  http.rs  logs.rs  mod.rs  server.rs
fx-runtime/src/tasks/: blob.rs  compiler.rs  cron.rs  kv.rs  management.rs  mod.rs  sql.rs
fx-runtime/src/tasks/management/: mod.rs  runtime_state.rs
fx-runtime/src/tasks/sql/: controller.rs  mod.rs
fx-runtime/src/tasks/worker/: controller.rs  messages.rs  mod.rs  task.rs  worker.rs
fx-runtime/src/triggers/: cron.rs  http.rs  mod.rs
fx-runtime/src/v2/: config.rs  cron.rs  definitions.rs  errors.rs  function.rs  http.rs  logs.rs  mod.rs  runtime.rs
fx-runtime/tests/: integration_test.rs  logger.rs
fx-runtime/tests/common/: utils.rs
fx-sdk/: Cargo.toml
fx-sdk/src/: api.rs  fx_futures.rs  fx_streams.rs  handler.rs  handler_fn.rs  http.rs  lib.rs  logging.rs  metrics.rs  sql.rs  sys.rs
fx-sdk/src/api/: blob.rs  env.rs  http.rs  kv.rs  metrics.rs  mod.rs  sql.rs  tasks.rs
fx-sdk/src/sys/: future.rs  logs.rs  mod.rs  resource.rs
fx-sdk/src/utils/: axum.rs  migrations.rs
fx-server/: Cargo.toml
fx-server/src/: compiler.rs  consumer.rs  cron.rs  http.rs  kv.rs  logs.rs  main.rs
fx-services/: readme.md
fx-services/fx-app-counter/src/: lib.rs
fx-services/fx-app-hello-world/: Cargo.toml
fx-services/fx-app-hello-world/src/: lib.rs
fx-services/fx-app-mocks/: Cargo.toml
fx-services/fx-app-mocks/src/: lib.rs
fx-services/fx-app-rpc-test-service/: Cargo.toml
fx-services/fx-app-rpc-test-service/src/: lib.rs
fx-services/fx-test-app/: Cargo.toml
fx-services/fx-test-app/src/: lib.rs
fx-tests/: Cargo.toml
fx-tests/src/: main.rs
fx-types/: Cargo.toml  abi.capnp  abi_blob.capnp  abi_function_resources.capnp  abi_host_resources.capnp  abi_http.capnp  abi_kv.capnp  abi_log.capnp  abi_metrics.capnp  abi_sql.capnp  build.rs  events.capnp
fx-types/src/: abi.rs  lib.rs
fx-utils/: Cargo.toml
fx-utils/src/: lib.rs
fx-utils/src/database/: connection.rs  error.rs  executor.rs  mod.rs  row.rs  types.rs  value.rs
fx/src/: api.rs  error.rs  futures.rs  fx_futures.rs  fx_streams.rs  handler.rs  http.rs  invoke.rs  lib.rs  logging.rs  metrics.rs  sql.rs  sys.rs
fx/src/utils/: axum.rs  migrations.rs  mod.rs
local/: .gitignore  cron.yaml  fx.yaml
