[workspace]
resolver = "2"
members = [
    "fx-runtime",
    "fx-sdk",
    "fx-types",

    "extra/fx-macro",
    "extra/fx-common",

    "apps/fx-app-counter",
    "apps/fx-app-hello-world",
    "apps/fx-app-mocks",
    "apps/fx-app-rpc-test-service",
    "apps/fx-fortunes",
    "apps/fx-test-app",
]
