[workspace]
resolver = "2"
members = [
    "fx-runtime",
    "fx-sdk",
    "fx-types",

    "extra/fx-macro",

    "apps/fx-app-demo",
    "apps/fx-app-mocks",
    "apps/fx-fortunes",
    "apps/fx-test-app",
    "apps/fx-test-missing-export",
    "apps/fx-test-remove",
    "apps/fx-test-wrong-import"
]
