[package]
name = "fx-cloud-dashboard"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8.3", default-features = false }
tower = "0.5.2"
futures = "0.3.31"
tokio = { version = "1.44.2", default-features = false }
tracing = "0.1.41"

fx = { path = "../fx" }
fx-utils = { path = "../fx-utils" }
