[package]
name = "fx-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
http-body-util = "0.1.3"
rayon = "1.10.0"
thread_local = "1.1.8"
wasmer = "5.0.4"
wasmer-middlewares = "5.0.4"
rusqlite = { version = "0.35.0", features = ["bundled"] }
rmp-serde = "=1.3.0"
serde = "1.0.219"
rdkafka = "0.37.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
crossbeam = "0.8.4"
cron = "0.15.0"
chrono = "0.4.40"
sha2 = "0.10.8"

fx-core = { path = "../fx-core" }
fx-cloud-common = { path = "../fx-cloud-common" }
