[package]
name = "fx-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
http-body-util = "0.1.3"
rayon = "1.10.0"
thread_local = "1.1.8"
wasmer = { git = "https://github.com/wasmerio/wasmer" }
wasmer-middlewares = { git = "https://github.com/wasmerio/wasmer" }
rusqlite = { version = "0.35.0", features = ["bundled"] }
rusqlite_migration = "2.1.0"
rmp-serde = "=1.3.0"
serde = "1.0.219"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "stream"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
crossbeam = "0.8.4"
cron = "0.15.0"
chrono = "0.4.40"
sha2 = "0.10.8"
serde_yml = "0.0.12"
futures = "0.3.31"
rand = "0.9.1"
prometheus = "0.14.0"
clap = { version = "4.5.38", features = ["derive"] }
notify = "8.0.0"
async-stream = "0.3.6"
pathdiff = "0.2.3"

fx-common = { path = "../fx-common" }
fx-runtime-common = { path = "../fx-runtime-common" }
fx-api = { path = "../fx-api" }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
tikv-jemallocator = "0.6.0"
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }
