[package]
name = "fx-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tokio = { version = "1.44.2", features = ["full"] }
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
http-body-util = "0.1.3"
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
cron = "0.15.0"
chrono = "0.4.40"
anyhow = "1.0.98"
prometheus = "0.14.0"
tracing-subscriber = "0.3.19"

fx-runtime = { path = "../fx-runtime" }
fx-runtime-common = { path = "../fx-runtime-common" }
fx-common = { path = "../fx-common" }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
tikv-jemallocator = "0.6.0"
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }
