[package]
name = "fx-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-rs-async-executor = "0.9.0"
axum = { version = "0.8.3", default-features = false }
tower = "0.5.2"
futures = "0.3.31"
sqlx = { version = "0.8.5", default-features = false }
sqlx-core = "0.8.5"
log = "0.4.27"
thiserror = "2.0.12"

fx = { path = "../fx" }
