[package]
name = "fx"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"
rmp-serde = "=1.3.0"
serde = "1.0.219"
futures = "0.3.31"
once_cell = "1.21.3"
thiserror = "2.0.12"
serde_json = "1.0.140"
chrono = { version = "0.4.41", default-features = false }
axum = { version = "0.8.3", default-features = false }
tower = "0.5.2"
inventory = "0.3.21"
anyhow = "1.0.100"

fx-common = { path = "../extra/fx-common" }
fx-macro = { path = "../extra/fx-macro" }
fx-api = { path = "../fx-api" }
