[package]
name = "fx-dashboard"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
axum = { version = "0.8.3", default-features = false }
tokio = { version = "1.44.2", default-features = false }
tracing = "0.1.41"
leptos = { version = "0.7.8", features = ["ssr"], default-features = false }

fx-sdk = { path = "../../fx-sdk" }
