[package]
name = "fx-test-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
sqlx = { version = "0.8.5", default-features = false }
tracing = "0.1.41"
lazy_static = "1.5.0"
async-stream = "0.3.6"
axum = { version = "0.8.8", default-features = false }
base64 = "0.22.1"
fx-sdk = { path = "../../fx-sdk" }
