[package]
name = "fx-test-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
sqlx = { version = "0.8.5", default-features = false }
tracing = "0.1.41"
lazy_static = "1.5.0"
async-stream = "0.3.6"
axum = { version = "0.8.8", default-features = false, features = ["json"] }
base64 = "0.22.1"
futures = "0.3"
serde = "1.0.228"
stream-reduce = "0.1.0"
fx-sdk = { path = "../../fx-sdk" }
